--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-scripts start",
+    "buildr": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "antd": "^4.22.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-screen-capture": "1.0.0",
     "react-media-recorder": "^1.6.6"
   },
   "devDependencies": {
